# ffmepg_app

./: CMakeLists.txt  main.c  main.cpp
src/: camera.cpp  camera.h  dshow_capture_video.cpp  encode_video.c  encode_video.cpp  videoCap.cpp
src/ui/: camera.ui
